methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: not found: value faceMur
  while (!faceMur()) {
          ^