methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit: Boolean = false
  while (!faceMur()) {
    if (estSurBiscuit()) {
      vuBiscuit = true
    }
    avance()
  }
  recule(6)
  return vuBiscuit
}